<resources>
    <string name="app_name">Dungru</string>
    <!-- TODO: Facebook credentials -->
    <string name="facebook_app_id">465304195933163</string>
    <string name="fb_login_protocol_scheme">fb465304195933163</string>
    <string name="facebook_client_token">9b898905b461c18de2a7c66039b6d014</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign In</string>
    <string name="msg_sign_in_to_your">Sign In to your account</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">Or</string>
    <string name="sign_in_via">Sign in via</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="create_your_account">Create your account</string>
    <string name="have_an_account">Have an account?</string>
    <string name="sign_up_via">Sign up via</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Name</string>
    <string name="confirm_password">Confirm password</string>
    <string name="send_code">Send Code</string>
    <string name="enter_your_email_to_verify_your_account_for_reset_password">Enter your email to verify your account for reset password</string>
    <string name="otp_verification">OTP verification</string>
    <string name="we_have_send_you_code_in_your_email_address">We have send you code in your email id %1$s </string>
    <string name="verify_code">Verify Code</string>
    <string name="resend_code">Resend code?</string>
    <string name="create_password">Create Password</string>
    <string name="enter_your_new_and_confirm_password">Enter your new and confirm password</string>
    <string name="submit">Submit</string>
    <string name="live">Live</string>
    <string name="feed">Feed</string>
    <string name="coin">Coin</string>
    <string name="chats">Chats</string>
    <string name="go_live">Go Live</string>
    <string name="follow">+ Follow</string>
    <string name="setting">Setting</string>
    <string name="followed">Followed</string>
    <string name="search">Search…</string>
    <string name="popular">Popular</string>
    <string name="nearby">Nearby</string>
    <string name="new_str">New</string>
    <string name="following">Following</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="notification">Notification</string>
    <string name="title">Title</string>
    <string name="message">message</string>
    <string name="profile">Profile</string>
    <string name="wallet">Wallet</string>
    <string name="follower">Follower</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="full_name">Full Name</string>
    <string name="unique_name">Unique Name</string>
    <string name="gender">Gender</string>
    <string name="birth_date">Birth Date</string>
    <string name="select">Select</string>
    <string name="save">Save</string>
    <string name="post">Post</string>
    <string name="get_coins">Get Coins</string>
    <string name="withdraw_money">Withdraw Money</string>
    <string name="transaction_list">Transaction List</string>
    <string name="account">Account</string>
    <string name="reset_password">Reset Password</string>
    <string name="general_settings">General Settings</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="preference">Preference</string>
    <string name="language">Language</string>
    <string name="payment">Payment</string>
    <string name="payment_options">Payment Options</string>
    <string name="my_wallet">My Wallet</string>
    <string name="support">Support</string>
    <string name="help_center">Help Center</string>
    <string name="app_feedback">App Feedback</string>
    <string name="logout">Logout</string>
    <string name="version">Version</string>
    <string name="bank_name">Bank name*</string>
    <string name="enter_amount_name">Enter amount name</string>
    <string name="account_holder_name">Account holder name*</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="Confirm_account_number">Confirm account number*</string>
    <string name="account_number">Account number*</string>
    <string name="Re_enter_bank_no">***********</string>
    <string name="enter_bank_no">0000-0000-0000-0000</string>
    <string name="IFSC_CODE">IFSC code*</string>
    <string name="ifsc_code">Enter IFSC code</string>
    <string name="save_bank_details">Save bank details</string>
    <string name="enter_name">Enter name</string>
    <string name="proceed">Proceed</string>
    <string name="requested_amount">Requested Amount</string>
    <string name="rupee">₹</string>
    <string name="Bank_Transfer">Bank Transfer</string>
    <string name="Upi_Transfer">Upi Transfer</string>
    <string name="block_user">Block user</string>
    <string name="report_user">Report user</string>
    <string name="report">Report</string>
    <string name="block">Block</string>
    <string name="cancel">Cancel</string>
    <string name="withdrawal_request_submit">Withdrawal Request Submit</string>
    <string name="your_withdraw_of_80_will_be_credited_in">Your withdraw of $80 will be credited in \n your account within 24 hours</string>
    <string name="your_account_within_24_hours">your account within 24 hours</string>
    <string name="enter_amount1">Enter Amount</string>
    <string name="add_account">+ Add Account</string>
    <string name="wallet_faild">Wallet</string>
    <string name="upi_id">UPI ID*</string>
    <string name="ex_mobilenumber_upi">Ex: Mobilenumber@Upi</string>
    <string name="enter_your_upi_id">Enter Your UPI ID</string>
    <string name="_80">₹80</string>
    <string name="_99">₹99</string>
    <string name="_98">98</string>
    <string name="payment_method">Payment Method</string>
    <string name="select_your_bank_account">Select your bank account :</string>
    <string name="add_bank_details">+ Add bank details</string>
    <string name="add">+ Add</string>
    <string name="upi_payment">UPI payment</string>
    <string name="add_card">+ Add Card</string>
    <string name="save_card_details">Save card details</string>
    <string name="expiry_date">Expiry Date*</string>
    <string name="cvv">CVV*</string>
    <string name="card_number">Card Number*</string>
    <string name="enter_your_card_details">Enter Your Card Details</string>
    <string name="card_holder_name">Card Holder Name*</string>
    <string name="hint_holder_name">Enter Holder Name</string>
    <string name="hint_card_number">0000-0000-0000-0000</string>
    <string name="hint_date">MM/YY</string>
    <string name="hint_cvv_code">Code</string>
    <string name="general_setting">General Setting</string>
    <string name="privacy_and_security">Privacy and security</string>
    <string name="one_click_gifting">One-click gifting</string>
    <string name="disable_location">Disable location</string>
    <string name="chatssetting">Chats</string>
    <string name="post_and_moments">Post and moments</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="posts">Posts</string>
    <string name="blocked_user">Blocked User</string>
    <string name="create_new_password">Create new password</string>
    <string name="new_password_must_not_be_same_as_n_old_password">New password must not be same as \n old password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="change_password">Change Password</string>
    <string name="light_mode">Light Mode</string>
    <string name="notification_new">Notification</string>
    <string name="replies_on_your_comment">Replies on your comment</string>
    <string name="block_title">Are you sure you want to block this profile?</string>
    <string name="chats_title">Chats</string>
    <string name="last_time_seen">Last time seen</string>
    <string name="auto_play_videos">Auto play videos</string>
    <string name="read_receipts">Others can see when you\'ve read \ntheir messages.</string>
    <string name="follow_btn">+ Follow</string>
    <string name="chat">Chat</string>
    <string name="unfollow">Unfollow</string>
    <string name="dropdown_icon_description">Dropdown Icon</string>
    <string name="help_center_new">Help Center</string>
    <string name="contact_us">Contact Us</string>
    <string name="payment_card_setting">Payment card setting :</string>
    <string name="withdraw_bank_setting">Withdraw bank setting :</string>
    <string name="no_bank_found">No bank found.</string>
    <string name="no_card_found">No card found.</string>
    <string name="call_us">Call us</string>
    <string name="faqs">FAQs</string>
    <string name="send_us_a_message">Send us a message</string>
    <string name="our_help_center_is_here_to_assist_you_with_any_nquestions_concerns_or_issues_you_may_have">Our help center is here to assist you with any\nquestions, concerns, or issues you may have</string>
    <string name="welcome_to_our_help_center">Welcome to our help center</string>
    <string name="ok">Ok</string>
    <string name="chat_support">Chat Support</string>
    <string name="name">Name</string>
    <string name="are_you_sure_want_to_logout">Are you sure want to Logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="_1k">1k</string>
    <string name="resending">Resending…</string>
    <string name="change_email">Change email</string>
    <string name="change_your_email_address">Change your email address</string>
    <string name="update_your_email_address">Update your email address</string>
    <string name="new_email">New email</string>
    <string name="please_note_that_if_you_update_your_email_address_your_account_email_address_will_change"><font color="#FFFF0000">*</font> Please note that if you update your email address, your account email address will change.</string>
    <string name="oops_it_s_empty_here">Oops…it’s empty here!</string>
    <string name="earned_coins">Earned Coins</string>
    <string name="no_data_found">No data found.</string>
    <string name="are_you_sure_want_tio_unfollow">Are you sure want to unfollow this user?</string>
    <string name="unfollow_warning">Unfollow %1$s</string>
    <string name="unblock">Unblock</string>
    <string name="see_more">… See more</string>
    <string name="see_less">See less</string>
    <string name="no_posts_found">No posts found!</string>
    <string name="no_photos_found">No photos found!</string>
    <string name="no_videos_found">No videos found!</string>
    <string name="no_network">No Network Connection!!!</string>
    <string name="network_connected">Network Connected</string>
    <string name="authentication_failed">Authentication failed</string>


</resources>