<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="@dimen/_20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <!--view-->
        <View
            android:id="@+id/drawerView"
            android:layout_width="@dimen/_80dp"
            android:layout_height="@dimen/_3dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20dp"
            android:background="@drawable/bg_dialog_view_divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--hading-->
        <com.google.android.material.textview.MaterialTextView
            style="@style/DynamicTextColorStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15dp"
            android:layout_marginTop="@dimen/_20dp"
            android:fontFamily="@font/lato_bold"
            android:gravity="center_horizontal"
            android:maxLines="1"
            android:text="Enter Your Bank Details"
            android:textSize="@dimen/_18sp" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/DynamicTextColorStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15dp"
            android:layout_marginTop="@dimen/_10dp"
            android:fontFamily="@font/lato_regular"
            android:text="@string/bank_name"
            android:textSize="@dimen/_14sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dropdown_menu"
            style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15dp"
            android:layout_marginTop="@dimen/_5dp"
            android:background="@drawable/wallet_money">

            <androidx.appcompat.widget.AppCompatSpinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/wallet_money" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textview.MaterialTextView
            style="@style/DynamicTextColorStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15dp"
            android:layout_marginTop="@dimen/_10dp"
            android:fontFamily="@font/lato_regular"
            android:text="@string/account_number"
            android:textSize="@dimen/_14sp" />
        <!--Account no-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_account_no"
            style="@style/DynamicTextColorStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45dp"
            android:layout_marginHorizontal="@dimen/_15dp"
            android:layout_marginTop="@dimen/_5dp"
            android:background="@drawable/wallet_money"
            android:fontFamily="@font/lato_regular"
            android:gravity="center_vertical"
            android:hint="@string/Re_enter_bank_no"
            android:inputType="numberPassword"
            android:paddingHorizontal="@dimen/_15dp"
            android:textSize="@dimen/_16sp" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/DynamicTextColorStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15dp"
            android:layout_marginTop="@dimen/_10dp"
            android:fontFamily="@font/lato_regular"
            android:text="@string/Confirm_account_number"
            android:textSize="@dimen/_14sp" />
        <!--Confirm Account no-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_confirm_account_no"
            style="@style/DynamicTextColorStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45dp"
            android:layout_marginHorizontal="@dimen/_15dp"
            android:layout_marginTop="@dimen/_5dp"
            android:background="@drawable/wallet_money"
            android:fontFamily="@font/lato_regular"
            android:gravity="center_vertical"
            android:hint="@string/enter_bank_no"
            android:inputType="number"
            android:paddingHorizontal="@dimen/_15dp"
            android:textSize="@dimen/_16sp" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/DynamicTextColorStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15dp"
            android:layout_marginTop="@dimen/_10dp"
            android:fontFamily="@font/lato_regular"
            android:text="@string/account_holder_name"
            android:textSize="@dimen/_14sp" />
        <!--Holder Name-->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_Account_Holder_Name"
            style="@style/DynamicTextColorStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45dp"
            android:layout_marginHorizontal="@dimen/_15dp"
            android:layout_marginTop="@dimen/_5dp"
            android:background="@drawable/wallet_money"
            android:fontFamily="@font/lato_regular"
            android:gravity="center_vertical"
            android:hint="@string/enter_name"
            android:inputType="text"
            android:paddingHorizontal="@dimen/_15dp"
            android:textSize="@dimen/_16sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/DynamicTextColorStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_15dp"
                    android:layout_marginTop="@dimen/_10dp"
                    android:fontFamily="@font/lato_regular"
                    android:text="@string/IFSC_CODE"
                    android:textSize="@dimen/_14sp" />
                <!--ifsc code-->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/IfscCode"
                    style="@style/DynamicTextColorStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45dp"
                    android:layout_marginHorizontal="@dimen/_15dp"
                    android:layout_marginTop="@dimen/_5dp"
                    android:background="@drawable/wallet_money"
                    android:fontFamily="@font/lato_regular"
                    android:gravity="center_vertical"
                    android:hint="@string/ifsc_code"
                    android:inputType="number"
                    android:paddingHorizontal="@dimen/_15dp"
                    android:textSize="@dimen/_16sp" />

            </LinearLayout>
        </LinearLayout>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15dp"
            android:layout_marginTop="@dimen/_10dp"
            android:button="@drawable/ic_radio_button_selector"
            android:buttonTint="@color/pink"
            android:checked="false"
            android:padding="@dimen/_10dp"
            android:text="@string/save_bank_details"
            android:textSize="@dimen/_14sp"
            app:buttonIcon="@drawable/ic_radio_button_selector" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_Add_Bank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_10dp"
            android:layout_marginVertical="@dimen/_25dp"
            android:background="@drawable/bg_rounded_gradiant_color_button_50dp"
            android:elevation="@dimen/_10dp"
            android:fontFamily="@font/lato_bold"
            android:onClick="onClick"
            android:text="@string/add"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sp" />
    </LinearLayout>
</androidx.cardview.widget.CardView>