<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="@dimen/_20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--    view-->
        <View
            android:id="@+id/view2"
            android:layout_width="@dimen/_80dp"
            android:layout_height="@dimen/_3dp"
            android:layout_marginTop="@dimen/_20dp"
            android:background="@drawable/bg_dialog_view_divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_Titel"
            style="@style/DynamicTextColorStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30dp"
            android:fontFamily="@font/lato_bold"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/enter_your_card_details"
            android:textSize="@dimen/_24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view2" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_holder_Name"
            style="@style/DynamicTextColorStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15dp"
            android:layout_marginTop="@dimen/_25dp"
            android:fontFamily="@font/lato_regular"
            android:text="@string/card_holder_name"
            android:textSize="@dimen/_14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_Titel" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_Holder_Name"
            style="@style/DynamicTextColorStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45dp"
            android:layout_marginHorizontal="@dimen/_15dp"
            android:layout_marginTop="@dimen/_5dp"
            android:background="@drawable/wallet_money"
            android:fontFamily="@font/lato_regular"
            android:gravity="center_vertical"
            android:hint="@string/hint_holder_name"
            android:inputType="text"
            android:paddingHorizontal="@dimen/_15dp"
            android:textSize="@dimen/_16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_holder_Name" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_card_Num"
            style="@style/DynamicTextColorStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15dp"
            android:layout_marginTop="@dimen/_5dp"
            android:fontFamily="@font/lato_regular"
            android:text="@string/card_number"
            android:textSize="@dimen/_14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_Holder_Name" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_card_no"
            style="@style/DynamicTextColorStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45dp"
            android:layout_marginHorizontal="@dimen/_15dp"
            android:layout_marginTop="@dimen/_5dp"
            android:background="@drawable/wallet_money"
            android:fontFamily="@font/lato_regular"
            android:gravity="center_vertical"
            android:hint="@string/hint_card_number"
            android:inputType="number"
            android:paddingHorizontal="@dimen/_15dp"
            android:textSize="@dimen/_16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_card_Num" />


        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_card_no">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/DynamicTextColorStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_15dp"
                    android:fontFamily="@font/lato_regular"
                    android:text="@string/expiry_date"
                    android:textSize="@dimen/_14sp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etExpDate"
                    style="@style/DynamicTextColorStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45dp"
                    android:layout_marginStart="@dimen/_15dp"
                    android:layout_marginTop="@dimen/_5dp"
                    android:layout_marginEnd="@dimen/_5dp"
                    android:background="@drawable/wallet_money"
                    android:gravity="center_vertical"
                    android:hint="@string/hint_date"
                    android:inputType="date"
                    android:paddingHorizontal="@dimen/_15dp"
                    android:textSize="@dimen/_16sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5dp"
                    android:fontFamily="@font/lato_regular"
                    android:text="@string/cvv"
                    android:textSize="@dimen/_14sp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_Cvv"
                    style="@style/DynamicTextColorStyle"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_45dp"
                    android:layout_marginStart="@dimen/_5dp"
                    android:layout_marginTop="@dimen/_5dp"
                    android:layout_marginEnd="@dimen/_15dp"
                    android:background="@drawable/wallet_money"
                    android:gravity="center_vertical"
                    android:hint="@string/hint_cvv_code"
                    android:inputType="number"
                    android:paddingHorizontal="@dimen/_15dp"
                    android:textSize="@dimen/_16sp" />

            </LinearLayout>

        </LinearLayout>


        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/ChBoxAddCard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15dp"
            android:button="@drawable/ic_radio_button_selector"
            android:checked="false"
            android:padding="@dimen/_10dp"
            android:text="@string/save_card_details"
            android:textSize="@dimen/_14sp"
            app:buttonIcon="@drawable/ic_radio_button_selector"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_Add_Card"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45dp"
            android:layout_marginHorizontal="@dimen/_15dp"
            android:layout_marginBottom="@dimen/_40dp"
            android:background="@drawable/bg_rounded_gradiant_color_button_50dp"
            android:elevation="@dimen/_10dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/add_card"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ChBoxAddCard" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>